# GNU-Kanban

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ccpp.yml
app/: CMakeLists.txt  main.cpp  main.h  main.h.gch
include/core/: mainwindow.h
src/: CMakeLists.txt
src/core/: mainwindow.cpp
